# ChangeLog for sys-apps/915resolution
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/915resolution/Attic/ChangeLog,v 1.7 2007/01/07 21:32:41 tove Exp $

*915resolution-0.5.2-r1 (07 Jan 2007)

  07 Jan 2007; Patrick McLean <chutzpah@gentoo.org>
  +files/915resolution-0.5.2-830.patch, +915resolution-0.5.2-r1.ebuild:
  New revision, add support for 830 chipsets, bug #157403. Thanks to Stian Skjelstad 
  <stian@nixia.no> for the patch.

  27 Dec 2006; Piotr Jaroszyński <peper@gentoo.org>
  915resolution-0.5.2.ebuild:
  Add ~amd64 wrt bug #156597.

  22 Jul 2006; Patrick McLean <chutzpah@gentoo.org>
  915resolution-0.5.2.ebuild:
  Clean up the binary in the tarball before making, fixes bug #141437.

  22 Jul 2006; Patrick McLean <chutzpah@gentoo.org> files/confd:
  Fix default conf.d script to actually work.

  22 Jul 2006; Patrick McLean <chutzpah@gentoo.org> ChangeLog:
  Initial revision.
