@@ -1,0 +1,3 @@
+MD5 ed287778a53d02c31a7a6a52bc146291 915resolution-0.5.3.tar.gz 22583
+RMD160 a406c6810bbfcf94c5352ea1b1e9178af4078589 915resolution-0.5.3.tar.gz 22583
+SHA256 b64cab834b5e410bca555dc9db8e69f62f6f02496942f35ff4a68f3f27f1b542 915resolution-0.5.3.tar.gz 22583
