@@ -1,32 +1,47 @@
 #!/sbin/runscript
-# Copyright 1999-2006 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/915resolution/files/Attic/initd,v 1.1 2006/07/22 17:29:44 chutzpah Exp $
 
 depend() {
-	before xdm
+    before xdm
+}
+
+# Credit to David Leverton for this function which handily maps a bash array
+# structure to positional parameters so existing configs work :)
+# We'll deprecate arrays at some point though.
+_get_array() {
+    if [ -n "${BASH}" ] ; then
+		case "$(declare -p "$1" 2>/dev/null)" in
+	    	"declare -a "*)
+	    	echo "set -- \"\${$1[@]}\""
+	    	return
+	    	;;
+		esac
+    fi
+
+    echo "eval set -- \"\$$1\""
 }
 
 checkconfig() {
-	if [[ -z "${replace[*]}" ]]; then
-		eerror "You need to have at least one resolution to replace"
-		eerror "/etc/conf.d/915resolution"
-		return 1
-	fi
+    if [[ -z "${replace[*]}" ]]; then
+        eerror "You need to have at least one resolution to replace"
+        eerror "/etc/conf.d/915resolution"
+        return 1
+    fi
 
-	[[ "${log}" && -f "${log}" ]] && echo > "${log}"
+    [[ "${log}" && -f "${log}" ]] && echo > "${log}"
 
-	return 0
+    return 0
 }
 
 start() {
-	checkconfig || return 1
+    checkconfig || return 1
 
-	ebegin "Patching video BIOS with new video modes."
+    ebegin "Patching video BIOS with new video modes."
 
-	for mode in "${replace[@]}"; do
-		915resolution ${mode} >> ${log:-/dev/null} || retval=$?
-	done
+    eval $(_get_array replace)
+    for mode in "$@"; do
+        915resolution ${mode} >> ${log:-/dev/null}; retval=$?
+    done
 
-	eend ${retval}
+    eend ${retval}
 }
+
