@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/915resolution
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/915resolution/Attic/ChangeLog,v 1.7 2007/01/07 21:32:41 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/915resolution/Attic/ChangeLog,v 1.8 2007/04/17 16:36:06 genstef Exp $
+
+*915resolution-0.5.3 (17 Apr 2007)
+
+  17 Apr 2007; Stefan Schweizer <genstef@gentoo.org> files/initd,
+  +915resolution-0.5.3.ebuild:
+  Version bump, add baselayout-2 compatibility
 
 *915resolution-0.5.2-r1 (07 Jan 2007)
 
